# app/Http/Controllers/API/Hospitals/HospitalController.php
@@ -20,6 +20,47 @@ class HospitalController extends Controller
     /**
      * Display a listing of the resource.
      */
+    /** 
+     * @OA\Get(
+     *     path="/api/hospitals",
+     *     summary="Get all hospitals",
+     *     tags={"hospitals"},
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\Header(
+     *             header="Cache-Control",
+     *             description="Cache control header",
+     *             @OA\Schema(type="string", example="no-cache, private")
+     *         ),
+     *         @OA\Header(
+     *             header="Content-Type",
+     *             description="Content type header",
+     *             @OA\Schema(type="string", example="application/json; charset=UTF-8")
+     *         ),
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="array",
+     *                 @OA\Items(
+     *                     type="object",
+     *                     @OA\Property(property="hospital_id", type="integer"),
+     *                     @OA\Property(property="hospital_code", type="string"),
+     *                     @OA\Property(property="hospital_name", type="string"),
+     *                     @OA\Property(property="hospital_address", type="string"),
+     *                     @OA\Property(property="contact_number", type="string"),
+     *                     @OA\Property(property="hospital_email", type="string"),
+     *                     @OA\Property(property="created_at", type="string", format="date-time"),
+     *                     @OA\Property(property="deleted_at", type="string", format="date-time"),
+     *                     @OA\Property(property="updated_at", type="string", format="date-time")
+     *                 )
+     *             ),
+     *             @OA\Property(property="statusCode", type="integer", example=200)
+     *         )
+     *     )
+     * )
+     */
     public function index()
     {
         $user = auth()->user();
@@ -47,6 +88,42 @@ class HospitalController extends Controller
 
     /**
      * Store a newly created resource in storage.
+     */
+    /**
+     * @OA\Post(
+     *     path="/api/hospitals",
+     *     summary="Create hospitals",
+     *     tags={"hospitals"},
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="hospital_name", type="string"),
+     *                     @OA\Property(property="hospital_address", type="string"),
+     *                     @OA\Property(property="contact_number", type="string"),
+     *                     @OA\Property(property="hospital_email", type="string"),
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\Header(
+     *             header="Cache-Control",
+     *             description="Cache control header",
+     *             @OA\Schema(type="string", example="no-cache, private")
+     *         ),
+     *         @OA\Header(
+     *             header="Content-Type",
+     *             description="Content type header",
+     *             @OA\Schema(type="string", example="application/json; charset=UTF-8")
+     *         ),
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string"),
+     *             @OA\Property(property="statusCode", type="integer")
+     *         )
+     *     )
+     * )
      */
     public function store(Request $request)
     {
@@ -94,6 +171,41 @@ class HospitalController extends Controller
     /**
      * Display the specified resource.
      */
+    /**
+     * @OA\Get(
+     *     path="/api/hospitals/{id}",
+     *     summary="Find hospital by ID",
+     *     tags={"hospitals"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="object",
+     *                 @OA\Property(property="hospital_id", type="integer", example=1),
+     *                 @OA\Property(property="hospital_code", type="string", example="HOSP001"),
+     *                 @OA\Property(property="hospital_name", type="string", example="LUMUMBA"),
+     *                 @OA\Property(property="hospital_address", type="string", example="Zanzibar"),
+     *                 @OA\Property(property="contact_number", type="string", example="000 000 000"),
+     *                 @OA\Property(property="hospital_email", type="string", example="hospital@gmail.com"),
+     *                 @OA\Property(property="created_by", type="integer", example=1),
+     *                 @OA\Property(property="created_at", type="string", format="date-time", example="2025-04-10T10:44:31.000000Z"),
+     *                 @OA\Property(property="updated_at", type="string", format="date-time", example="2025-04-10T10:44:31.000000Z"),
+     *                 @OA\Property(property="deleted_at", type="string", format="date-time", nullable=true, example=null)
+     *             ),
+     *             @OA\Property(property="statusCode", type="integer", example=200)
+     *         )
+     *     )
+     * )
+     */
     public function show(int $id)
     {
         $user = auth()->user();
@@ -122,6 +234,48 @@ class HospitalController extends Controller
 
     /**
      * Update the specified resource in storage.
+     */
+    /**
+     * @OA\Put(
+     *     path="/api/hospitals/{id}",
+     *     summary="Update hospital",
+     *     tags={"hospitals"},
+     *      @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *      ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\Header(
+     *             header="Cache-Control",
+     *             description="Cache control header",
+     *             @OA\Schema(type="string", example="no-cache, private")
+     *         ),
+     *         @OA\Header(
+     *             header="Content-Type",
+     *             description="Content type header",
+     *             @OA\Schema(type="string", example="application/json; charset=UTF-8")
+     *         ),
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(
+     *                 property="data",
+     *                 type="array",
+     *                 @OA\Items(
+     *                     type="object",
+     *                     @OA\Property(property="hospital_name", type="string"),
+     *                 @OA\Property(property="hospital_address", type="string" ),
+     *                 @OA\Property(property="contact_number", type="string"),
+     *                 @OA\Property(property="hospital_email", type="string"),
+     *                 )
+     *             ),
+     *             @OA\Property(property="statusCode", type="integer", example=200)
+     *         )
+     *     )
+     * )
      */
     public function update(Request $request, string $id)
     {
@@ -175,6 +329,38 @@ class HospitalController extends Controller
 
     /**
      * Remove the specified resource from storage.
+     */
+    /**
+     * @OA\Delete(
+     *     path="/api/hospitals/{id}",
+     *     summary="Delete hospital",
+     *     tags={"hospitals"},
+     *     @OA\Parameter(
+     *         name="id",
+     *         in="path",
+     *         required=true,
+     *         @OA\Schema(type="string")
+     *     ),
+     *      @OA\Response(
+     *         response=200,
+     *         description="Successful operation",
+     *         @OA\Header(
+     *             header="Cache-Control",
+     *             description="Cache control header",
+     *             @OA\Schema(type="string", example="no-cache, private")
+     *         ),
+     *         @OA\Header(
+     *             header="Content-Type",
+     *             description="Content type header",
+     *             @OA\Schema(type="string", example="application/json; charset=UTF-8")
+     *         ),
+     *         @OA\JsonContent(
+     *             type="object",
+     *             @OA\Property(property="message", type="string"),
+     *             @OA\Property(property="statusCode", type="integer")
+     *         )
+     *     )
+     * )
      */
     public function destroy(int $id)
     {
